--- a/views/index.jade
+++ b/views/index.jade
@@ -1,48 +1,16 @@
 extends layout
 
+
 block content
   h1= title
   p Welcome to Makersbnb
-
-  // Wrapper
-  #wrapper
-
-    // USER INFO
-    #spaceInfo
-      h2 Space Info
-      p
-        strong Name:
-        |  <span id='spaceInfoName'></span>
-        br
-        strong Description:
-        |  <span id='spaceInfoDescription'></span>
-        br
-        strong Price:
-        |  <span id='spaceInfoPrice'></span>
-    // /Space INFO
-
-    // Space LIST
-    h2 Space List
-    #spaceList
-      table
-        thead
-          th Name
-          th Description
-          th Price
-          th
-        tbody
-    // /Space LIST
-
-    // ADD Space
-    h2 Add Space
-    #addSpace
-      fieldset
-        input#inputSpaceName(type='text', placeholder='Name')
-        input#inputSpaceDescription(type='text', placeholder='Description')
-        br
-        input#inputSpacePrice(type='text', placeholder='Price')
-        P
-        button#btnAddSpace Add Space
-    // /ADD USER
-
-  // /WRAPPER
+  
+  h3 Sign in to your profile
+  #signIn
+    fieldset
+      input#inputEmail(type='text', placeholder='e-mail')
+      input#inputPassword(type='text', placeholder='password')
+      br
+      P
+      button#btnSignin Sign in
+   
